src/styles/components.scss
@import 'config';

// universal settings 
*{
    max-width: 100vw;
    overflow-x: hidden;
    box-sizing: border-box;
    font-family: sans-serif;
    margin: 0;
    padding: 0;
}

// notification bar (above navbar) 
.notification{
    min-height: 2.5rem;
    width: 100%;
    background: $color-black;
    color: $color-white;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    white-space: nowrap;
}

// navbar
nav{
    padding: 1rem;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: space-between;

    // brand name 
    .brand-title{
        font-size: 2.1rem;
        letter-spacing: .2rem;
        user-select: none;
        color: $color-black;
        font-weight: 550;
    }

    // the links (desktop one) 
    ul{
        display: flex;
        gap: 1.5rem;

        li{
            a{
                color: $color-black;

                &:hover{
                    text-underline-offset: 3px;
                    text-decoration: underline 1px $color-black;
                }
            }
        }
    }

    // links (mobile one)
    ul.mob-nav-links{
        position: absolute;
        flex-direction: column;
        height: 100vh;
        left: 0;
        top: 0;
        justify-content: center;
        width: 70vw;
        border-right: solid 1px $color-black;
        z-index: 7;
        background: $color-white;
        a{
            display: flex;
            justify-content: center;
            padding: 1rem 0;
            font-size: 1.3rem;
            color: $color-black;
            &:hover{
                background: #e1e0e0;
            }
        }

        .nav-close-btn{
            position: absolute;
            top: 2%;
            right: 5%;
            font-size: 1.7rem;

            svg{
                height: 1.7rem;
            }
        }
    }

    //the icons (Cart and wishlist)
    .icon-links{
        display: flex;
        align-items: center;
        gap: .5rem;

        svg{
            cursor: pointer;
            height: 1.7rem;
        }
    }
}

//product card
.Product-card{
    display: flex;
    flex-direction: column;
    width: 22%;
    position: relative;
    color: $color-black;
    gap: .3rem;
    margin: 1rem 0;
    min-width: 15rem;
    img{
        aspect-ratio: 1/1;
        object-fit: cover;
    }
    .discount-label{
        background: $color-brand-blue;
        position: absolute;
        top: 5%;
        left: 5%;
        padding: .2rem;
        font-size: .9rem;
        color: $color-white;
        border-radius: 4px;
    }
    
    //price and compared price 
    .prices{
        display: flex;
        width: 100%;
        gap: .6rem;

        .price-compared{
            color: $color-grey;
            text-decoration: line-through 1px $color-black;
        }
    }
}

//styling things then are under $breakpoint-s-tab
@media (max-width: $breakpoint-s-tab) {
    .notification{
        p{
            font-size: .75rem;
        }
    }
    nav{
        .brand-title,.hamburger,.icon-links{
            width: 33.333333333333336%;
            display: flex;
        }
        .hamburger{
            justify-content: left;
        }
        .icon-links{
            justify-content: right;
        }
        .brand-title{
            justify-content: center;
        }
    }
    .Product-card{
        width: 46%;
    }
}
@media (max-width: $breakpoint-L-tab) {
    .Product-card{
        min-width: 10rem;
        width: 49%;
    }
}
@media (max-width: $breakpoint-mob) {
    .Product-card{  
        width: 49%;
        min-width: 7rem;
    }
}

